; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_powerdomains3xxx_data.c_ti81xx_pwrdm_set_next_pwrst.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-omap2/extr_powerdomains3xxx_data.c_ti81xx_pwrdm_set_next_pwrst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.powerdomain = type { i32 }

@OMAP_POWERSTATE_MASK = common dso_local global i32 0, align 4
@OMAP_POWERSTATE_SHIFT = common dso_local global i32 0, align 4
@TI81XX_PM_PWSTCTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.powerdomain*, i32)* @ti81xx_pwrdm_set_next_pwrst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ti81xx_pwrdm_set_next_pwrst(%struct.powerdomain* %0, i32 %1) #0 {
  %3 = alloca %struct.powerdomain*, align 8
  %4 = alloca i32, align 4
  store %struct.powerdomain* %0, %struct.powerdomain** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @OMAP_POWERSTATE_MASK, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @OMAP_POWERSTATE_SHIFT, align 4
  %8 = shl i32 %6, %7
  %9 = load %struct.powerdomain*, %struct.powerdomain** %3, align 8
  %10 = getelementptr inbounds %struct.powerdomain, %struct.powerdomain* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @TI81XX_PM_PWSTCTRL, align 4
  %13 = call i32 @omap2_prm_rmw_mod_reg_bits(i32 %5, i32 %8, i32 %11, i32 %12)
  ret i32 0
}

declare dso_local i32 @omap2_prm_rmw_mod_reg_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
